--- a/public/index.html
+++ b/public/index.html
@@ -682,8 +682,8 @@
   <span>SOURCE: VERYON MAINTENANCE TRACKING &nbsp;|&nbsp; Due-List_Latest_aw109sp.csv</span>
   <span>IHC HEALTH SERVICES — AVIATION MAINTENANCE</span>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 <script>
   function switchTab(tabName, btn) {
     document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
@@ -758,8 +758,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -782,8 +781,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -806,8 +804,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -830,8 +827,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -854,8 +850,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -878,8 +873,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -902,8 +896,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -926,8 +919,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
@@ -950,8 +942,7 @@
             tooltip: { callbacks: { label: function(c) { return c.parsed.y.toFixed(1) + ' hrs'; } } }
           },
           scales: {
-            min: 0,
-            y: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
+            y: { min: 0, ticks: { color: '#4a5568', font: { size: 9 } }, grid: { color: 'rgba(30,37,48,0.5)' } },
             x: { ticks: { color: '#4a5568', font: { size: 9 } }, grid: { display: false } }
           }
         }
