--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
   </div>
   <div class="header-meta">
     <div class="date">REPORT DATE: 20 FEB 2026</div>
-    <div>FLEET: 9 AIRCRAFT &nbsp;|&nbsp; 0 AIRBORNE &nbsp;|&nbsp; 0 AT BASE &nbsp;|&nbsp; GENERATED: 28 FEB 2026 22:00</div>
+    <div>FLEET: 9 AIRCRAFT &nbsp;|&nbsp; 0 AIRBORNE &nbsp;|&nbsp; 0 AT BASE &nbsp;|&nbsp; GENERATED: 28 FEB 2026 22:03</div>
   </div>
 </header>
 <div class="legend">
@@ -1082,6 +1082,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 6039.5,
+              suggestedMax: 6044.9,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1109,6 +1111,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 6064.46,
+              suggestedMax: 6075.24,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1136,6 +1140,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 6966.4,
+              suggestedMax: 6970.0,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1163,6 +1169,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 6489.0,
+              suggestedMax: 6495.7,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1190,6 +1198,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 5885.7,
+              suggestedMax: 5889.5,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1217,6 +1227,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 1994.7,
+              suggestedMax: 1999.7,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1244,6 +1256,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 3315.2,
+              suggestedMax: 3320.7,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1271,6 +1285,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 1846.1,
+              suggestedMax: 1848.1,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
@@ -1298,6 +1314,8 @@
           scales: {
             y: {
               beginAtZero: false,
+              suggestedMin: 10.1,
+              suggestedMax: 12.1,
               ticks: { color: '#4a5568', font: { size: 9 }, callback: function(v) { return v.toFixed(0); } },
               grid: { color: 'rgba(30,37,48,0.5)' }
             },
