--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   :root {
     --bg:#0a0c0f; --surface:#111418; --surface2:#181c22; --border:#1e2530;
     --green:#00e676; --amber:#ffab00; --red:#ff1744; --overdue:#ff6d00;
-    --blue:#29b6f6; --text:#cdd6e0; --muted:#ffffff; --heading:#e8edf2;
+    --blue:#29b6f6; --text:#f7f7f7; --muted:#ffffff; --heading:#e8edf2;
     --mono:'Share Tech Mono',monospace;
     --sans:'Barlow Condensed',sans-serif;
     --body:'Barlow',sans-serif;
